--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+
+.container ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: rgb(215, 237, 237);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container a{
+  float: left;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 14px 16px;
+  font-family:Arial, Helvetica, sans-serif;
+  color: black;
+  text-decoration: none;
+  font-family: 'Montserrat', sans-serif;
+  font-size: large;
+  
+}
+.container a:hover{
+  background-color: rgb(169, 199, 199);
 }
 
-.App-link {
-  color: #61dafb;
+.top-bar{
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  float: right;
+  padding: 0 30px;
+  animation: slideTop .5s ease forwards;
+  animation-delay: calc(.2s * var(--i));
+
+}
+.container .top-mail {
+  padding: 9px 10px;
+  float: right;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container .top-git {
+  padding: 9px 10px;
+  float: right;
+
+}
+.container .top-link {
+  padding: 9px 10px;
+  float: right;
+
 }
