--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -5,9 +5,21 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(177, 244, 244);
+    /* background-color: rgb(177, 244, 244); */
 
 }
+.logo {
+    width: 270px;
+    height: 90px;
+    left: 35px;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    padding-top: 5px;
+    
+}
+
+
 
 .innerbox{
     min-width: 400px;
@@ -21,6 +33,13 @@
     flex-direction: column;
     gap: 20px;
 }
+.innerbox:hover{
+    min-width: 400px;
+    border-radius: 20px;
+    box-shadow: 0 0 5px rgb(146, 213, 218),
+    0 0 10px rgb(146, 213, 218), 0 0 15px rgb(146, 213, 218);
+}
+
 
 .heading{
     text-align: center;
@@ -72,4 +91,20 @@
     color: rgb(45, 131, 229);
     letter-spacing: 1px;
     font-size: 1rem;
+}
+
+.font{
+    margin-top: 150px ;
+    margin-left: 70px;
+}
+
+.font h2{
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: 600;
+    font-size: xx-large;
+    font-size: 70px;
+}
+
+.font span{
+    color: orange;
 }
