--- a/src/components/Signup/signup.module.css
+++ b/src/components/Signup/signup.module.css
@@ -5,8 +5,30 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(177, 244, 244);
+    /* background-color: rgb(177, 244, 244); */
 
+}
+
+.logo {
+    width: 270px;
+    height: 90px;
+    left: 35px;
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    padding-top: 5px;
+    
+}
+
+.font1 h2{
+    font-family: 'IBM Plex Mono', monospace;
+    font-weight: 600;
+    font-size: xx-large;
+    font-size: 70px;
+}
+
+.font1 span{
+    color: orange;
 }
 
 .innerbox{
@@ -20,6 +42,12 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+}
+.innerbox:hover{
+    min-width: 400px;
+    border-radius: 20px;
+    box-shadow: 0 0 5px rgb(146, 213, 218),
+    0 0 8px rgb(146, 213, 218),0 0 10px rgb(146, 213, 218);
 }
 
 .heading{
@@ -75,3 +103,9 @@
     letter-spacing: 1px;
     font-size: 1rem;
 }
+
+.font1{
+    margin-top: 150px ;
+    margin-left: 70px;
+}
+
