--- a/src/App.css
+++ b/src/App.css
@@ -57,21 +57,30 @@
 
 .upload-box{
   font-family: "Poppins", 'sans-serif';
-  width: 100%;
+  width: 50%;
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.05);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 15px;
-  margin-bottom: 100px;
+  padding: 5px;
+  margin-bottom: 20px;
   
 }
 
 .upload-box .icon{
   bottom: 0;
   top: 0;
+  width: 30px;
+  height: 40px;
+}
+.upload-box img{
+  max-width:100px;
+  max-height: 60px;
+  padding-right: 62px;
+  padding-top: 10px;
+  
 }
 .upload-box .para{
   text-align: center;
@@ -81,7 +90,7 @@
   height: fit-content;
   display: flex;
   cursor: pointer;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
   align-items: center;
   justify-content: center;
