--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
   
 }
 
-.upload-box .icon{
+.upload-box .icon1{
   bottom: 0;
   top: 0;
   width: 30px;
@@ -199,6 +199,57 @@ section .details span{
 .uploaded-area i.fa-check{
   font-size: 20px;
   margin-left: 200px;
-
-  
 }
+
+
+/*--------- NavBar Section ------*/
+
+.navbar{
+  display: flex;
+  justify-content:center;
+  align-items: center; 
+  float: right;
+
+}
+.navbar a{
+  justify-content: space-between;
+  display: block;
+  text-align: center;
+  float: left;
+  text-decoration: none;
+  padding: 10px 20px;
+  font-size: 25px;
+  font-weight: 500;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+.navbar a:hover{
+  font-size: x-large;
+  text-shadow: 0 0 3px rgb(179, 236, 240),
+  0 0 5px rgb(179, 236, 240), 0 0 8px rgb(179, 236, 240);
+}
+
+.user{
+  padding: 20px 0;
+  float: left;
+  margin-left: 17px;
+  font-size: 20px;
+}
+
+.user span{
+  color: orange;
+}
+
+.icon{
+  display: inline-block;
+  width: 170px;
+  height: 60px;
+  left: 35px;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  padding-top: 5px;
+}
+
+/*--------- End of NavBar Section ------*/
+
