--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,82 +1,57 @@
-.container1{
-   width: 50%;
-   min-height: 10vh;
-   display: flex;
-   flex-direction: column ;
-   justify-content: center;
-   align-items: center;
-   padding-right: 400px;
-   padding: 10px 15px;
-}
-.main_container h1{
-    text-align: center;
-    padding: 10px 20px;
-    padding-bottom: -10px;
+
+
+.homesection{
+    max-width: 80rem;
+    margin: 0 auto;
 }
 
-
-.main_container{
-    min-width: 100px;
-    height: fit-content;
-    width: fit-content;
-    box-shadow: 1px 1px 4px rgb(36, 35, 35) ;
-    margin-top: 150px;
-    margin-left: auto;
-    margin-right:auto;
-    padding: 40px;
-    border-radius: 25px;
-    /* justify-content: center; */
-    gap: 20px;
-
+.content_box{
+    padding: 55px 35px;
 }
 
-.navbar{
-    display: flex;
-    justify-content:center;
-    align-items: center; 
-    float: right;
-
-}
-.navbar a{
-    justify-content: space-between;
-    display: block;
-    text-align: center;
-    float: left;
-    text-decoration: none;
-    padding: 10px 20px;
-    font-size: 25px;
-    font-weight: 500;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+.content_box .content .title{
+    font-weight: 900;
+    font-family: 'IBM Plex Mono', monospace;
+    width: 100%;
+    height: 10vh;
+    
 }
 
-.navbar a:hover{
-    font-size: x-large;
-    text-shadow: 0 0 3px rgb(179, 236, 240),
-    0 0 5px rgb(179, 236, 240), 0 0 8px rgb(179, 236, 240);
+.content_box .content .title .title_short{
+    padding-top: 48px;
+    color: #6C63FF;
+    padding-left: 2px;
+    
+}
+.content_box .content .description{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:500;
+    max-width: 30rem;
+    /* /* padding-left: 20vh;
+    padding-right: 20px; */
+    padding-top: 82px; 
 }
 
-.user{
-    padding: 60px 0;
-    float: left;
-    margin-left: 35px;
-    font-size: 20px;
-}
+.homesection picture{
+    margin: 0 auto;
+    /* padding-left: 100px; */
 
-.user span{
-    color: orange;
 }
-
-.icon{
-    display: inline-block;
-    width: 170px;
-    height: 60px;
-    left: 35px;
+.homesection picture img{
+    border-radius: 80px;
+   
+    width: auto;
+    height: 400px;
+    margin-top: -55vh;
     position: absolute;
-    bottom: 0;
-    top: 0;
-    padding-top: 5px;
-
+    right: 120px ;
+  
+}
+.homesection button{
+    background-color: #6C63FF;
+    color: #fff;
+}
+.homesection button:hover{
+    box-shadow: none;
 }
 
-
-/* Upload icon css */
