--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,8 @@
   justify-content: center;
   padding: 5px;
   margin-bottom: 20px;
-  
+  padding-left: auto;
+  padding-right: auto;
 }
 
 .upload-box .icon1{
