--- a/src/components/Home/UserInfo.module.css
+++ b/src/components/Home/UserInfo.module.css
@@ -1,12 +1,12 @@
 .container1{
-   width: 50%;
+   width: 90%;
    min-height: 10vh;
    display: flex;
-   flex-direction: column ;
+   flex-direction: row ;
    justify-content: center;
    align-items: center;
    padding-right: 400px;
-   padding: 10px 15px;
+   padding: 10px 20px;
 }
 .main_container h1{
     text-align: center;
@@ -20,7 +20,7 @@
     height: fit-content;
     width: fit-content;
     box-shadow: 1px 1px 4px rgb(36, 35, 35) ;
-    margin-top: 150px;
+    margin-top: 60px;
     margin-left: auto;
     margin-right:auto;
     padding: 40px;
@@ -28,6 +28,21 @@
     /* justify-content: center; */
     gap: 20px;
 
+}
+
+.main_container button{
+    background-color: #6C63FF;
+    color: white;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    width: 100%;
+    height: auto;  
+    padding-top: 1px;
+    margin: 6px 0;  
+}
+.main_container button:hover{
+    box-shadow: #6C63FF;
 }
 
 
