--- a/src/components/Pages/UserInfo.module.css
+++ b/src/components/Pages/UserInfo.module.css
@@ -1,5 +1,5 @@
 .container1{
-   width: 90%;
+   width: 100%;
    min-height: 10vh;
    display: flex;
    flex-direction: row ;
@@ -20,13 +20,14 @@
     height: fit-content;
     width: fit-content;
     box-shadow: 1px 1px 4px rgb(36, 35, 35) ;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right:auto;
+    /* margin-top: 60px; */
+    /* margin-left: auto;
+    margin-right:auto; */
     padding: 40px;
     border-radius: 25px;
     /* justify-content: center; */
     gap: 20px;
+    
 
 }
 
