--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -1,12 +1,18 @@
 .container{
-    min-height: 100vh;
+    min-height: 91vh;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     /* background-color: rgb(177, 244, 244); */
-
+    
+}
+.body{
+    background: url("H:\Major project\project\src\images\vadim-bozhko-lbO1iCnbTW0-unsplash.jpg");
+    background-size: cover; /* Adjust as needed */
+    background-repeat: no-repeat;
+    margin-top: 40px;
 }
 .logo {
     width: 270px;
@@ -15,8 +21,7 @@
     position: absolute;
     bottom: 0;
     top: 0;
-    padding-top: 5px;
-    
+    padding-top: 5px; 
 }
 
 
@@ -44,6 +49,7 @@
 
 .heading{
     text-align: center;
+    font-family: 'poppins', sans-serif
 }
 
 .footer{
@@ -84,6 +90,7 @@
 .footer button:hover{
     font-size: medium;
     background-color: rgb(10, 112, 229);
+    
     /* box-shadow: 0 0 5px rgb(49, 175, 238),
     0 0 8px rgb(49, 175, 238),0 0 11px rgb(49, 175, 238); */
 }
@@ -96,7 +103,7 @@
 }
 
 .font{
-    margin-top: 150px ;
+    margin-top: 120px ;
     margin-left: 70px;
 }
 
@@ -108,7 +115,34 @@
 }
 
 .font span{
-    color: orange;
+    color: #fff;
+}
+
+
+.btn{
+    display: flex;
+    margin-left: 70px;
+    padding: 25px 2px;
+    
+    
+}
+
+.btn  button{
+    margin-right: 70px;
+    width: fit-content;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-family: 'poppins', sans-serif;
+    background-color: rgb(55, 142, 241);
+    color: #fff;
+    border: none;
+    font-size: 20px;
+    
+}
+
+.btn button:hover{
+    font-size: 20px;
+    background-color: rgb(10, 112, 229);
 }
 
 .innerbox .googlebtn{
@@ -126,7 +160,7 @@
     font-style: 'IBM Plex Mono', monospace;
     background-color: #fff;
     width: fit-content;
-    border-radius: 10px;
+    border-radius: 5px;
     padding: 1px 70px;
     margin-top: -10px;
     
