--- a/src/components/Signup/signup.module.css
+++ b/src/components/Signup/signup.module.css
@@ -1,5 +1,5 @@
 .container{
-    min-height: 100vh;
+    min-height: 91vh;
     width: 100%;
     height: 100%;
     display: flex;
@@ -7,6 +7,12 @@
     align-items: center;
     /* background-color: rgb(177, 244, 244); */
 
+}
+.body{
+    background: url("H:\Major project\project\src\images\vadim-bozhko-lbO1iCnbTW0-unsplash.jpg");
+    background-size: cover; /* Adjust as needed */
+    background-repeat: no-repeat;
+    margin-top: 40px;
 }
 
 .logo {
@@ -28,7 +34,7 @@
 }
 
 .font1 span{
-    color: orange;
+    color: white;
 }
 
 .innerbox{
@@ -105,7 +111,28 @@
 }
 
 .font1{
-    margin-top: 150px ;
+    margin-top: 120px ;
     margin-left: 70px;
 }
 
+.btn{
+    display: flex;
+    margin-left: 70px;
+    padding: 25px 2px;
+    
+    
+}
+
+.btn  button{
+    margin-right: 70px;
+    width: fit-content;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-family: 'poppins', sans-serif;
+    background-color: rgb(55, 142, 241);
+    color: #fff;
+    border: none;
+    font-size: 20px;
+    
+   
+}
