--- a/src/components/ChatBot/Chatting.module.css
+++ b/src/components/ChatBot/Chatting.module.css
@@ -11,7 +11,7 @@
   /* CHATBOX
   =============== */
   .chatbox {
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     right: 30px;
   }
