--- a/src/components/Home/dashboard.module.css
+++ b/src/components/Home/dashboard.module.css
@@ -41,7 +41,7 @@ body{
     padding: 0px 10px;
     margin-top: 0px;
     background: var(--sidebar-color);
-    background-color:#d2bdbd;
+    background-color:#c5c5da;
 }
 
 .sidebar li{
@@ -59,9 +59,10 @@ body{
 
 .sidebar  header .image_text {
     display: flex;
+    justify-content: center;
     align-items: center;
-    font-size: large;
-    font-weight: 600;
+    font-size: xx-large;
+    font-weight: 700;
     gap: 15px;
     color: #707070;
     
@@ -86,6 +87,7 @@ body{
     transition: all 0.2s ease;
     
 }
+
 
 .menu_bar .menu_links li {
     display: flex;
@@ -116,13 +118,13 @@ body{
 }
 
 .sidebar li a:hover{
-    background-color: #695CFE;
+    background-color: rgb(55, 142, 241);
     color: #F6F5FF;
 }
 
 .sidebar li .icon:hover,
 .sidebar li .nav_text:hover{
-    color: #efebeb ;
+    color: #efebeb ; 
     transition: all 0.2s ease;
 }
 
