--- a/src/components/Login/login.module.css
+++ b/src/components/Login/login.module.css
@@ -9,21 +9,53 @@
     
 }
 .body{
-    background: url("H:\Major project\project\src\images\vadim-bozhko-lbO1iCnbTW0-unsplash.jpg");
     background-size: cover; /* Adjust as needed */
     background-repeat: no-repeat;
     margin-top: 40px;
+    /* background: rgba(0, 0, 0, 0.5); */
+    position: relative;
+    
 }
+
+.overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Adjust the transparency as needed */
+    z-index: -1;
+}
+
+.body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("H:\Major project\project\src\images\vadim-bozhko-lbO1iCnbTW0-unsplash.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    pointer-events: none;
+    z-index: 0;
+}
+.body_content {
+    position: relative;
+    z-index: 8; /* Ensure content is above the overlay */
+}
+
+
 .logo {
     width: 270px;
-    height: 90px;
+    height: 91px;
     left: 35px;
     position: absolute;
     bottom: 0;
     top: 0;
     padding-top: 5px; 
 }
-
 
 
 .innerbox{
@@ -34,7 +66,6 @@
     box-shadow: 1px 1px 4px rgb(27, 29, 29);
     border-radius: 20px;
     padding: 30px;
-
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -60,7 +91,7 @@
     font-weight: 700;
 }
 
-.footer .error{
+.innerbox .error{
     font-size: 500;
     color: rgb(205, 33, 33);
     text-align: center;
@@ -78,11 +109,11 @@
     border: none;
     background-color: rgb(55, 142, 241);
     color: #ffff;
-    border-radius: 5px;
-    font-size: 1rem;
+    border-radius: 5rem;
+    font-size: 20px;
     padding: 9px 16px;
     width: 100%;
-    font-weight: 500;
+    font-weight: 200;
 }
 .footer button:disabled{
     background-color: gray !important;
@@ -90,6 +121,8 @@
 .footer button:hover{
     font-size: medium;
     background-color: rgb(10, 112, 229);
+    font-size: 20px;
+    font-weight: 200;
     
     /* box-shadow: 0 0 5px rgb(49, 175, 238),
     0 0 8px rgb(49, 175, 238),0 0 11px rgb(49, 175, 238); */
@@ -131,12 +164,13 @@
     margin-right: 70px;
     width: fit-content;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 5rem;
     font-family: 'poppins', sans-serif;
     background-color: rgb(55, 142, 241);
     color: #fff;
     border: none;
     font-size: 20px;
+    font-weight: 200;
     
 }
 
@@ -160,7 +194,7 @@
     font-style: 'IBM Plex Mono', monospace;
     background-color: #fff;
     width: fit-content;
-    border-radius: 5px;
+    border-radius: 5rem;
     padding: 1px 70px;
     margin-top: -10px;
     
