--- a/src/components/Signup/signup.module.css
+++ b/src/components/Signup/signup.module.css
@@ -9,10 +9,36 @@
 
 }
 .body{
-    background: url("H:\Major project\project\src\images\vadim-bozhko-lbO1iCnbTW0-unsplash.jpg");
+    /* background: url("H:\Major project\project\src\images\vadim-bozhko-lbO1iCnbTW0-unsplash.jpg"); */
     background-size: cover; /* Adjust as needed */
     background-repeat: no-repeat;
     margin-top: 40px;
+    position: relative;
+}
+
+.overlay::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Adjust the transparency as needed */
+    z-index: -1;
+}
+
+.body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("H:\Major project\project\src\images\vadim-bozhko-lbO1iCnbTW0-unsplash.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    pointer-events: none;
+    z-index: 0;
 }
 
 .logo {
@@ -127,12 +153,17 @@
     margin-right: 70px;
     width: fit-content;
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 5rem;
     font-family: 'poppins', sans-serif;
     background-color: rgb(55, 142, 241);
     color: #fff;
     border: none;
     font-size: 20px;
+    font-weight: 200;
     
-   
+}
+
+.btn button:hover{
+    font-size: 20px;
+    background-color: rgb(10, 112, 229);
 }
